splitview: Make splitview indicator more localizable.

Rotate the opposite direction for landscape in rtl, so rtl users look the
same way as ltr users.
Use preferred size instead of fixed for the text, this will look better
and also scale better for longer languages.

Screenshot: https://screenshot.googleplex.com/KPRjTcZ0ib1

Test: manual
Bug: 778407
Change-Id: If13f886acdc7d8e89b115306934d9f7297067cf7
Reviewed-on: https://chromium-review.googlesource.com/740299
Reviewed-by: Valery Arkhangorodsky <varkha@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512204}
Former-commit-id: 7e6f2699b135ca4b2f591275b84da32724dbc1aa